# django_recurring

./: .aider.conf.yml  .aider.prompt.md  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  pytest.ini  requirements_dev.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  admin.rst  conf.py  examples.rst  forms.rst  history.rst  index.rst  installation.rst  make.bat  management_commands.rst  models.rst  modules.rst  recurring.rst  requirements.txt  usage.rst  widgets.rst
src/recurring/: __init__.py  admin.py  apps.py  forms.py  models.py  settings_test.py  utils.py  widgets.py
src/recurring/management/commands/: calculate_occurrences.py  recalculate_occurrences.py
src/recurring/migrations/: 0001_initial.py  0002_alter_calendarentry_description_and_more.py  0002_alter_recurrencerule_byhour_and_more.py  0002_remove_recurrenceset_timezone_and_more.py  0003_calendarentry_first_occurrence_and_more.py  0003_delete_recurrenceset_delete_recurrencesetrule.py  0003_recurrencerule_end_date_recurrencerule_start_date.py  0004_alter_calendarentry_options_and_more.py  0004_calendarentry_created_at_calendarentry_updated_at.py  0004_remove_recurrencerule_end_date_and_more.py  0005_recurrencerule_until.py  0005_recurrenceruledaterange_is_exclusion_and_more.py  0006_remove_recurrencerule_until_and_more.py  0007_alter_recurrenceset_name.py
src/recurring/static/admin/css/: calendar_entry_widget.css  rrule_widget.css
src/recurring/static/admin/js/: calendar_entry_widget.js  rrule_widget.js
src/recurring/templates/admin/recurring/: calendar_entry_widget.html  recurrence_rule_widget.html  recurrence_set_widget.html  rrule_widget.html
tests/: __init__.py  test_admin_widget.py  test_django_recurring.py  test_forms.py  test_models.py  test_utils.py
