[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django_recurring"
version = "0.1.0"
description = "Create repeating datetimes in django using dateutil rrulesets"
readme = "README.rst"
authors = [
  {name = "Boosh", email = "boosh@example.com"}
]
maintainers = [
  {name = "Boosh", email = "boosh@example.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
    "pytz",
    "icalendar==5.0.13",
    "python-dateutil",
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "pytest-django",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/boosh/django_recurring/issues"
changelog = "https://github.com/boosh/django_recurring/blob/master/changelog.md"
homepage = "https://github.com/boosh/django_recurring"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

